# 5d_matrix

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h  matrixTest.c  matrixTest.h
